// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deletes a file correctly 1`] = `
<div>
  <div
    class="ui container one column grid"
    style="padding-top: 40px;"
  >
    <div
      class="sixteen wide column"
    >
      <h3
        class="ui header"
      >
        Upload Study Documents for DRC Approval
      </h3>
      <table
        class="ui stackable very basic very compact table"
      >
        <tbody
          class=""
        >
          <tr
            class=""
            data-testid="file-item"
          >
            <td
              class="collapsing single line center aligned"
            >
              <div
                class="ui orange tiny basic label"
              >
                Pending Review
              </div>
            </td>
            <td
              class=""
            >
              <a
                href="/study/undefined/documents/SF_5ZPEM167"
                style="display: block; width: 100%;"
              >
                <span
                  class="ui medium header"
                >
                  organization.jpeg
                </span>
                <p
                  style="text-overflow: ellipsis; overflow: hidden;"
                >
                  Month necessary animal end standard case. View system operation message decade. Actually sing becaus...
                </p>
              </a>
              <div
                class="ui bulleted horizontal list"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <button
                    class="ui mini basic icon left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    SF_5ZPEM167
                  </button>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    Created 
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    5.5 kB
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="hospital icon"
                  />
                   Clinical/Phenotype Data
                </div>
              </div>
            </td>
            <td
              class="collapsing right aligned"
            >
              <div
                class="ui buttons"
              >
                <button
                  class="ui icon button"
                >
                  <i
                    aria-hidden="true"
                    class="download icon"
                  />
                </button>
                <button
                  class="ui icon negative button"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash alternate icon"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="ui divider"
      />
      <div
        class="row"
      >
        <form>
          <div
            class="ui placeholder piled segment"
          >
            <div
              class="ui icon header"
            >
              <i
                aria-hidden="true"
                class="file outline icon"
              />
              To upload Study Documents drag and drop a file here
              <br />
              <small>
                or
              </small>
            </div>
            <br />
            <label
              class="ui icon primary left labeled button"
              for="file"
              role="button"
            >
              <i
                aria-hidden="true"
                class="file outline icon"
              />
              Choose a file
            </label>
            <input
              hidden=""
              id="file"
              multiple=""
              type="file"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <div
    class="ui container one column grid"
    style="padding-top: 40px;"
  >
    <div
      class="sixteen wide column"
    >
      <h3
        class="ui header"
      >
        Upload Study Documents for DRC Approval
      </h3>
      <table
        class="ui stackable very basic very compact table"
      >
        <tbody
          class=""
        >
          <tr
            class=""
            data-testid="file-item"
          >
            <td
              class="collapsing single line center aligned"
            >
              <div
                class="ui orange tiny basic label"
              >
                Pending Review
              </div>
            </td>
            <td
              class=""
            >
              <a
                href="/study/undefined/documents/SF_5ZPEM167"
                style="display: block; width: 100%;"
              >
                <span
                  class="ui medium header"
                >
                  organization.jpeg
                </span>
                <p
                  style="text-overflow: ellipsis; overflow: hidden;"
                >
                  Month necessary animal end standard case. View system operation message decade. Actually sing becaus...
                </p>
              </a>
              <div
                class="ui bulleted horizontal list"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <button
                    class="ui mini basic icon left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    SF_5ZPEM167
                  </button>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    Created 
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    5.5 kB
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="hospital icon"
                  />
                   Clinical/Phenotype Data
                </div>
              </div>
            </td>
            <td
              class="collapsing right aligned"
            >
              <div
                class="ui buttons"
              >
                <button
                  class="ui icon button"
                >
                  <i
                    aria-hidden="true"
                    class="download icon"
                  />
                </button>
                <button
                  class="ui icon negative button"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash alternate icon"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            class=""
            data-testid="file-item"
          >
            <td
              class="collapsing single line center aligned"
            >
              <div
                class="ui orange tiny basic label"
              >
                Pending Review
              </div>
            </td>
            <td
              class=""
            >
              <a
                href="/study/undefined/documents/SF_Y07IN1HO"
                style="display: block; width: 100%;"
              >
                <span
                  class="ui medium header"
                >
                  its.mp3
                </span>
                <p
                  style="text-overflow: ellipsis; overflow: hidden;"
                >
                  Question meeting move recognize.
                </p>
              </a>
              <div
                class="ui bulleted horizontal list"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <button
                    class="ui mini basic icon left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    SF_Y07IN1HO
                  </button>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    Created 
                    <time
                      datetime="2019-04-06T07:51:17.000Z"
                      title="2019-04-06T07:51:17+00:00"
                    >
                      2 weeks ago
                    </time>
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    6.8 kB
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="shipping icon"
                  />
                   Shipping Manifest
                </div>
              </div>
            </td>
            <td
              class="collapsing right aligned"
            >
              <div
                class="ui buttons"
              >
                <button
                  class="ui icon button"
                >
                  <i
                    aria-hidden="true"
                    class="download icon"
                  />
                </button>
                <button
                  class="ui icon negative button"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash alternate icon"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="ui divider"
      />
      <div
        class="row"
      >
        <form>
          <div
            class="ui placeholder piled segment"
          >
            <div
              class="ui icon header"
            >
              <i
                aria-hidden="true"
                class="file outline icon"
              />
              To upload Study Documents drag and drop a file here
              <br />
              <small>
                or
              </small>
            </div>
            <br />
            <label
              class="ui icon primary left labeled button"
              for="file"
              role="button"
            >
              <i
                aria-hidden="true"
                class="file outline icon"
              />
              Choose a file
            </label>
            <input
              hidden=""
              id="file"
              multiple=""
              type="file"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`shows an error 1`] = `
<div>
  <div
    class="ui icon negative message"
  >
    <i
      aria-hidden="true"
      class="warning circle icon"
    />
    <div
      class="content"
    >
      <div
        class="header"
      >
        Error
      </div>
      <p>
        Network error: something went wrong
      </p>
    </div>
  </div>
</div>
`;
